--- a/style.css
+++ b/style.css
@@ -229,6 +229,7 @@ code {
 }
 
 #trixie {
+	font-size: 24px;
 	background: -webkit-linear-gradient(rgba(128, 0, 128, 1), rgba(127, 0, 255, 1));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
